# afdiankit

./: .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/setup-node/: action.yml
.github/workflows/: pyright.yml
afdiankit/: __init__.py  afdian.py  config.py  core.py  exception.py  typing.py
afdiankit/auth/: __init__.py  base.py  token.py  unauth.py
afdiankit/open/: __init__.py  types.py  utils.py
afdiankit/rest/: __init__.py  account.py  badge.py  bang.py  category.py  comment.py  creator.py  faq.py  init.py  log.py  message.py  my.py  oauth.py  oauth2.py  order.py  passport.py  paypal.py  post.py  suiyinzi.py  types.py  upload.py  user.py  welcome.py
codegen/: __init__.py  config.py  models.py  utils.py
codegen/data/: api-app.6cacb0bd.js  data.json
codegen/templates/: header.jinja
codegen/templates/client/: _param.py.jinja  _request.py.jinja  client.py.jinja
codegen/templates/models/: types.py.jinja
codegen/templates/namespace/: namespace.py.jinja
