[tool.poetry]
name = "afdiankit"
version = "0.1.0"
description = "Afdian SDK for Python"
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/StarHeartHunt/afdiankit"
repository = "https://github.com/StarHeartHunt/afdiankit"
documentation = "https://github.com/StarHeartHunt/afdiankit"
keywords = ["afdian"]
include = ["afdiankit/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0"
httpx = ">=0.23.0, <1.0.0"
typing-extensions = "^4.3.0"
anyio = { version = "^3.6.1", optional = true }

[tool.poetry.group.dev.dependencies]
tomli = "^2.0.1"
ruff = "^0.0.286"
isort = "^5.10.1"
black = "^23.1.0"
Jinja2 = "^3.1.2"
nonemoji = "^0.1.2"
pre-commit = "^3.0.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037", "F403"]

line-length = 88
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
reportPrivateImportUsage = false
reportShadowedImports = false

pythonPlatform = "All"
executionEnvironments = [
  { root = "./codegen", pythonVersion = "3.11" },
  { root = "./", pythonVersion = "3.8", extraPaths = [
    "./",
  ] },
]

typeCheckingMode = "basic"

[tool.codegen]
client_output = "afdiankit/rest/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
